--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body{
     /* background-color: aliceblue; */
-    background-color: gray;
+    /* background-color: gray; */
     height: 100vh;
     width: 90vw;
     margin: auto;
@@ -18,6 +18,7 @@ img, i, button, li{
     cursor: pointer;
 }
 
+/* Toggle Switch */
 .toggle-mode {
     width: 2rem;
     height: 1rem;
@@ -29,7 +30,7 @@ img, i, button, li{
     padding: 2px;
     cursor: pointer;
     transition: background-color 0.3s ease-in-out;
-    position: fixed; 
+    position: fixed;
     top: 10px;
     right: 10px;
 }
@@ -42,14 +43,28 @@ img, i, button, li{
     transition: transform 0.3s ease-in-out;
 }
 
+/* Active State (Dark Mode) */
 .toggle-mode.active {
-    background-color: #4caf50; 
+    background-color: #4caf50;
     justify-content: end;
 }
 
 .toggle-mode.active .toggle-knob {
-    transform: translateX(1rem);
+    transform: translateX(0.05rem);
 }
+
+/* Dark Mode */
+.dark-mode {
+    background-color: #121212;
+    color: white;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.music-card-dark{
+    background-color: gray;
+}
+
+
 
 
 .music-container{
@@ -68,6 +83,7 @@ img, i, button, li{
     flex-direction: column;
     gap: 1rem;
 }
+
 
 .input-songs{
     margin-bottom: 0.75rem;
@@ -150,26 +166,59 @@ img{
     }
 }
 
-.distance-covered {
-    border: 2px solid gray;
-    width: 40%;
-    /* height: 5px; */
-    position: relative;
-    transition: all 0.2s ease;
-    /* overflow: hidden; */
+/* .toggle-mode {
+    width: 2rem;
+    height: 1rem;
+    border-radius: 10px;
+    background-color: rgba(128, 128, 128, 0.289);
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    padding: 2px;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+    position: fixed;
+    top: 10px;
+    right: 10px;
 }
 
-.distance-covered::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 0; /* Start at 0% */
-    transform: translate(-50%, -50%);
+.toggle-knob {
+    width: 0.8rem;
+    height: 0.8rem;
+    background-color: white;
+    border-radius: 50%;
+    transition: transform 0.3s ease-in-out;
+} */
+
+.distance-covered {
+    width: 40%;
+    height: 0.1rem;
+    border-radius: 10px;
+    background-color: rgba(128, 128, 128, 0.289);
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    padding: 2px 0;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.distance-knob {
     height: 10px;
     width: 10px;
     border-radius: 50%;
     background-color: blue;
     transition: left 0.2s ease-in-out;
+}
+
+.distance-knob.active{
+    transform: translateX(10rem);
+}
+
+.display-plalists{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .change-songs{
@@ -189,7 +238,7 @@ img{
     }
 }
 
-.addToPlaylist{
+.addToPlaylist-btn, .newPlaylist{
     padding: 0.65rem 1rem;
         border: none;
         outline: none;
