--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ img, i, button, li{
 }
 
 .music-left-div, .music-center-div, .music-right-div{
-    height: 100vh;
+    height: auto;
     width: 100%;
     background-color: rgb(127, 195, 255);
     margin-bottom: 0;
@@ -137,7 +137,7 @@ ul{
 
 .music-card{
     width: 100%;
-    height: 60%;
+    height: 400px;
     background-color: rgb(65, 65, 182);
     border-radius: 10px;
     padding: 1rem;
@@ -149,7 +149,7 @@ ul{
 
 img{
     width: 100%;
-    height: 100%;
+    height: 80%;
 }
 
 .music-duration-display{
